--- a/.github/workflows/wqi-cron.yml
+++ b/.github/workflows/wqi-cron.yml
@@ -1,62 +1,43 @@
-name: WQI Window Service (cron)
+name: Run WQI Service
 
 on:
-  schedule:
-    - cron: "*/1 * * * *"   # every minute (UTC); change if you want
-  workflow_dispatch:        # add a "Run workflow" button for manual runs
+  workflow_dispatch:
 
 jobs:
-  run-wqi:
+  run:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install firebase-admin pandas numpy joblib xgboost hmmlearn scikit-learn
 
-      - name: Write Firebase service account from secret
+      - name: Create service account JSON from secret
         env:
-          FIREBASE_SA_JSON_B64: ${{ secrets.FIREBASE_SA_JSON_B64 }}
+          SA_BASE64: ${{ secrets.SA_BASE64 }}
         run: |
-          echo "$FIREBASE_SA_JSON_B64" | base64 -d > serviceAccountKey.json
+          echo "$SA_BASE64" | base64 --decode > serviceAccountKey.json
           ls -l serviceAccountKey.json
 
-      - name: Run window-level WQI (one-shot)
+      - name: Run WQI script
         env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/serviceAccountKey.json
-          FIREBASE_DB_URL: ${{ secrets.FIREBASE_DB_URL }}
-
-          # database paths
-          FB_PATH_SENSOR: sensor_readings
-          FB_PATH_WATERLOGS: waterLogs
-          FB_PATH_RES_WINDOWS: wqi_window_results
-
-        # your timestamp key is 'timestamp' and it is in IST local time
-          TIME_FIELD: timestamp
-          TZ_LOCAL: Asia/Kolkata
-
-          # windowing (overlap)
-          WINDOW_SIZE: "10"
-          STEP_SIZE: "3"
-
-          # run once per cron tick (no infinite loop)
-          RUN_CONTINUOUS: "false"
-          # how far back to fetch each run (minutes)
-          LOOKBACK_MIN: "10"
-
-          # model usage (optional; keep false if you don’t have artifacts yet)
-          USE_MODEL: "false"
-          ARTIFACT_DIR: ./artifacts
-          ACCEPTABLE_MODEL_CLASSES: '["low"]'
+          GOOGLE_APPLICATION_CREDENTIALS: serviceAccountKey.json
+          FIREBASE_DB_URL: "https://mywaterproject-e6489-default-rtdb.asia-southeast1.firebasedatabase.app/"
+          FB_PATH_SENSOR: "sensor_readings"
+          FB_PATH_WATERLOGS: "waterLogs"
+          FB_PATH_RES_WINDOWS: "wqi_window_results"
+          ARTIFACT_DIR: "./artifacts"
+          USE_MODEL: "true"
+          FORCE_FULL_FETCH: "true"   # set to true first run to pull old records
+          LOOKBACK_MIN: "120"
+          POLL_SECONDS: "20"
         run: |
           python firebase_window_wqi_service.py
